End of notebook1

--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -45,9 +45,7 @@
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "\n",
     "courses = load_json('data/courses.txt')\n",
-    "stopwords = load_pkl('data/stopwords.pkl')\n",
-    "print(stopwords)\n",
-    "print(courses[1])\n"
+    "stopwords = load_pkl('data/stopwords.pkl')\n"
    ]
   },
   {
@@ -69,7 +67,7 @@
     "ps = PorterStemmer()\n",
     "translator = str.maketrans('', '', string.punctuation)\n",
     "for course in courses:\n",
-    "    temp = course['description']\n",
+    "    temp = course['description'].lower()\n",
     "    for word in stopwords:\n",
     "        temp = temp.replace(' '+word+' ',' ')\n",
     "    temp = temp.translate(translator)\n",
@@ -78,8 +76,7 @@
     "    #    stemList.append(ps.stem(word))\n",
     "    #temp = ' '.join(stemList)\n",
     "        \n",
-    "    newCourses.append({'name':course['name'],'description':temp})\n",
-    "print(newCourses[1]['description'].lower())"
+    "    newCourses.append({'name':course['name'],'description':temp.split(' ')})"
    ]
   },
   {
@@ -93,32 +90,40 @@
     "def countDocWithTerm(term,docs):\n",
     "    result = 0\n",
     "    for doc in docs:\n",
-    "        if term in doc['description'].split(' '):\n",
+    "        if term in doc['description']:\n",
     "            result += 1\n",
     "    return result\n",
     "            \n",
     "\n",
     "terms =[]\n",
     "for item in newCourses:\n",
-    "    for word in item['description'].split(' '):\n",
-    "        terms.append(word)\n",
+    "    terms.extend(item['description'])\n",
     "terms = list(collections.Counter(terms).keys())\n",
     "terms.remove('')\n",
+    "termsDict ={}\n",
+    "for i,term in enumerate(terms):\n",
+    "    termsDict[i]=term\n",
+    "termsDict = dict(collections.OrderedDict(sorted(termsDict.items())))\n",
+    "print(termsDict)\n",
+    "newCoursesDict = {}\n",
+    "for i,doc in enumerate(newCourses):\n",
+    "    newCoursesDict[i]=doc\n",
+    "newCoursesDict = dict(collections.OrderedDict(sorted(newCoursesDict.items())))\n",
     "values =[]\n",
     "rows=[]\n",
     "columns=[]\n",
     "print(len(terms))\n",
-    "for i,term in enumerate(terms):\n",
+    "for i,term in termsDict.items():\n",
     "    if i%250 == 0:\n",
     "        print(i)\n",
-    "    for j,doc in enumerate(newCourses):\n",
-    "        if term in doc['description'].split(' '):\n",
-    "            tf = doc['description'].count(term)/len(doc['description'].split(' '))\n",
+    "    for index,doc in newCoursesDict.items():\n",
+    "        if term in doc['description']:\n",
+    "            tf = doc['description'].count(term)/len(doc['description'])\n",
     "            idf = math.log(len(newCourses)/countDocWithTerm(term,newCourses))\n",
     "            tf_idf=tf*idf\n",
     "            values.append(tf_idf)\n",
     "            rows.append(i)\n",
-    "            columns.append(j)\n",
+    "            columns.append(index)\n",
     "X = csr_matrix((values, (rows, columns)), shape=(len(terms), len(newCourses)))\n",
     "print(X)\n",
     "            \n",
@@ -139,7 +144,17 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#X = X.toarray()\n",
+    "a = 0\n",
+    "for key,value in newCoursesDict.items():\n",
+    "    if value['name'] == 'Internet analytics':\n",
+    "        a = key\n",
+    "        break;\n",
+    "temp =np.argsort(X[:,43])[::-1][:15]\n",
+    "for i in temp:\n",
+    "    print(termsDict[i])"
+   ]
   },
   {
    "cell_type": "markdown",
