--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -42,7 +42,8 @@
     "import math\n",
     "import collections\n",
     "from nltk.stem import PorterStemmer\n",
-    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem.lancaster import LancasterStemmer\n",
     "\n",
     "courses = load_json('data/courses.txt')\n",
     "stopwords = load_pkl('data/stopwords.pkl')\n"
@@ -63,20 +64,15 @@
    },
    "outputs": [],
    "source": [
-    "newCourses =[]\n",
-    "ps = PorterStemmer()\n",
-    "translator = str.maketrans('', '', string.punctuation)\n",
-    "for course in courses:\n",
-    "    temp = course['description'].lower()\n",
-    "    for word in stopwords:\n",
-    "        temp = temp.replace(' '+word+' ',' ')\n",
-    "    temp = temp.translate(translator)\n",
-    "    stemList = []\n",
-    "    #for word in temp.split(' '):\n",
-    "    #    stemList.append(ps.stem(word))\n",
-    "    #temp = ' '.join(stemList)\n",
-    "        \n",
-    "    newCourses.append({'name':course['name'],'description':temp.split(' ')})"
+    "def bigrams(l):\n",
+    "    zipO = list(zip(l, l[1:]))\n",
+    "    returnl = [str(tup[0])+' '+str(tup[1]) for tup in zipO]\n",
+    "    return l+returnl\n",
+    "\n",
+    "l1=[1,2,3,4,5,6,7,8]\n",
+    "\n",
+    "l2=bigrams(l1)\n",
+    "print(l2)"
    ]
   },
   {
@@ -87,47 +83,89 @@
    },
    "outputs": [],
    "source": [
-    "def countDocWithTerm(term,docs):\n",
-    "    result = 0\n",
-    "    for doc in docs:\n",
-    "        if term in doc['description']:\n",
-    "            result += 1\n",
-    "    return result\n",
-    "            \n",
+    "ps = PorterStemmer()\n",
+    "wnl = WordNetLemmatizer()\n",
+    "ls = LancasterStemmer()\n",
+    "translator = str.maketrans('', '', string.punctuation)\n",
+    "newCourses =[]\n",
     "\n",
+    "#test = wnl.lemmatize('studing')\n",
+    "#print(test)\n",
+    "\n",
+    "for course in courses:\n",
+    "    temp = course['description'].lower()\n",
+    "    temp = temp.translate(translator)\n",
+    "    temp = temp.split(' ')\n",
+    "    temp=[word for word in temp if word not in stopwords]\n",
+    "    temp=[ps.stem(word) for word in temp]\n",
+    "    temp=bigrams(temp)\n",
+    "    #print(temp)\n",
+    "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "terms =[]\n",
     "for item in newCourses:\n",
-    "    terms.extend(item['description'])\n",
-    "terms = list(collections.Counter(terms).keys())\n",
-    "terms.remove('')\n",
+    "    terms.extend(item['listDescription'])\n",
+    "countTerms = collections.Counter(terms)\n",
+    "terms = list(countTerms.keys())\n",
+    "\n",
     "termsDict ={}\n",
     "for i,term in enumerate(terms):\n",
     "    termsDict[i]=term\n",
     "termsDict = dict(collections.OrderedDict(sorted(termsDict.items())))\n",
-    "print(termsDict)\n",
+    "nb_terms = len(termsDict)\n",
+    "print(nb_terms)\n",
+    "\n",
     "newCoursesDict = {}\n",
     "for i,doc in enumerate(newCourses):\n",
     "    newCoursesDict[i]=doc\n",
     "newCoursesDict = dict(collections.OrderedDict(sorted(newCoursesDict.items())))\n",
+    "nb_courses = len(newCoursesDict)\n",
+    "print(nb_courses)\n",
+    "\n",
+    "def countDocWithTerm(term,docs):\n",
+    "    result = 0\n",
+    "    for doc in docs:\n",
+    "        if term in doc['listDescription']:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "values =[]\n",
     "rows=[]\n",
     "columns=[]\n",
-    "print(len(terms))\n",
+    "\n",
     "for i,term in termsDict.items():\n",
-    "    if i%250 == 0:\n",
-    "        print(i)\n",
     "    for index,doc in newCoursesDict.items():\n",
-    "        if term in doc['description']:\n",
-    "            tf = doc['description'].count(term)/len(doc['description'])\n",
-    "            idf = math.log(len(newCourses)/countDocWithTerm(term,newCourses))\n",
+    "        if term in doc['listDescription']:\n",
+    "            \n",
+    "            tf = doc['listDescription'].count(term)/len(doc['listDescription'])\n",
+    "            idf = math.log(nb_courses/countDocWithTerm(term,newCourses))\n",
     "            tf_idf=tf*idf\n",
+    "            \n",
     "            values.append(tf_idf)\n",
     "            rows.append(i)\n",
     "            columns.append(index)\n",
+    "            \n",
     "X = csr_matrix((values, (rows, columns)), shape=(len(terms), len(newCourses)))\n",
     "print(X)\n",
-    "            \n",
-    "            "
+    "        "
    ]
   },
   {
@@ -145,14 +183,16 @@
    },
    "outputs": [],
    "source": [
-    "#X = X.toarray()\n",
+    "Xarray = X.toarray()\n",
     "a = 0\n",
     "for key,value in newCoursesDict.items():\n",
     "    if value['name'] == 'Internet analytics':\n",
     "        a = key\n",
     "        break;\n",
-    "temp =np.argsort(X[:,43])[::-1][:15]\n",
-    "for i in temp:\n",
+    "\n",
+    "idxIX = np.argsort(Xarray[:,a])[::-1][:15]\n",
+    "\n",
+    "for i in idxIX:\n",
     "    print(termsDict[i])"
    ]
   },
@@ -170,7 +210,93 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "fb = 0\n",
+    "mc = 0\n",
+    "for key,value in termsDict.items():\n",
+    "    if value==ps.stem('facebook'):\n",
+    "        fb = key\n",
+    "    elif value==ps.stem('markov chains'):\n",
+    "        mc = key\n",
+    "'''\n",
+    "\n",
+    "def similarity(a,b):\n",
+    "    sim = (np.dot(a.T,b))/(np.linalg.norm(a)*np.linalg.norm(b))\n",
+    "    return sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def query(q):\n",
+    "    cosSim = {}\n",
+    "    idxCourses = []\n",
+    "    \n",
+    "    for i,doc in newCoursesDict.items():        \n",
+    "        if ps.stem(q) in doc['listDescription']:\n",
+    "            print(doc['name'])\n",
+    "            idxCourses.append(i)\n",
+    "    print('------------------------------')\n",
+    "    combi = itertools.combinations(idxCourses, 2)\n",
+    "    \n",
+    "    for idx in combi:\n",
+    "        a = Xarray[:,idx[0]]\n",
+    "        b = Xarray[:,idx[1]]\n",
+    "        cosSim[idx] = similarity(a,b)\n",
+    "\n",
+    "    npCosSim = np.array(list(cosSim.values()))\n",
+    "    idxQuery = np.argsort(npCosSim)[::-1][:5]\n",
+    "    \n",
+    "    for j in idxQuery:\n",
+    "        tup = list(cosSim.keys())[j]\n",
+    "        for i,doc in newCoursesDict.items():\n",
+    "            if i==tup[0]:\n",
+    "                print(doc['name'])\n",
+    "            elif i==tup[1]:\n",
+    "                print(doc['name'])\n",
+    "        print('------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "query('markov chain')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "query('facebook')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "query('scala')"
+   ]
   }
  ],
  "metadata": {
