--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *P*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Pierre Fouche*\n",
+    "* *Matthias Leroy*\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -46,7 +46,7 @@
     "from nltk.stem.lancaster import LancasterStemmer\n",
     "\n",
     "courses = load_json('data/courses.txt')\n",
-    "stopwords = load_pkl('data/stopwords.pkl')\n"
+    "stopwords = load_pkl('data/stopwords.pkl')"
    ]
   },
   {
@@ -68,11 +68,31 @@
     "    zipO = list(zip(l, l[1:]))\n",
     "    returnl = [str(tup[0])+' '+str(tup[1]) for tup in zipO]\n",
     "    return l+returnl\n",
+    "def trigrams(l):\n",
+    "    zipO = list(zip(l, l[1:], l[2:]))\n",
+    "    returnl = [str(tup[0])+' '+str(tup[1])+' '+str(tup[2]) for tup in zipO]\n",
+    "    return l+returnl\n",
     "\n",
     "l1=[1,2,3,4,5,6,7,8]\n",
     "\n",
-    "l2=bigrams(l1)\n",
+    "l2=trigrams(l1)\n",
     "print(l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def removeInfrequentWords(wordsList):\n",
+    "    count = collections.Counter(wordsList)\n",
+    "    for key,value in count.items():\n",
+    "        if value == 1:\n",
+    "            wordsList.remove(key) \n",
+    "    return wordsList"
    ]
   },
   {
@@ -98,9 +118,13 @@
     "    temp = temp.split(' ')\n",
     "    temp=[word for word in temp if word not in stopwords]\n",
     "    temp=[ps.stem(word) for word in temp]\n",
+    "    temp = removeInfrequentWords(temp)\n",
     "    temp=bigrams(temp)\n",
+    "    temp = trigrams(temp)\n",
+    "    temp = removeInfrequentWords(temp)\n",
     "    #print(temp)\n",
-    "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})"
+    "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})\n",
+    "\n"
    ]
   },
   {
@@ -115,10 +139,8 @@
     "for item in newCourses:\n",
     "    terms.extend(item['listDescription'])\n",
     "countTerms = collections.Counter(terms)\n",
-    "terms = list(countTerms.keys())\n",
-    "\n",
     "termsDict ={}\n",
-    "for i,term in enumerate(terms):\n",
+    "for i,term in enumerate(countTerms.keys()):\n",
     "    termsDict[i]=term\n",
     "termsDict = dict(collections.OrderedDict(sorted(termsDict.items())))\n",
     "nb_terms = len(termsDict)\n",
@@ -295,7 +317,7 @@
    },
    "outputs": [],
    "source": [
-    "query('scala')"
+    "query('computer')"
    ]
   }
  ],
