Fix bugs with k-grams

--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -71,12 +71,12 @@
     "def trigrams(l):\n",
     "    zipO = list(zip(l, l[1:], l[2:]))\n",
     "    returnl = [str(tup[0])+' '+str(tup[1])+' '+str(tup[2]) for tup in zipO]\n",
-    "    return l+returnl\n",
+    "    return returnl\n",
     "\n",
     "l1=[1,2,3,4,5,6,7,8]\n",
-    "\n",
-    "l2=trigrams(l1)\n",
-    "print(l2)"
+    "l2 = bigrams(l1)\n",
+    "l3=trigrams(l1)\n",
+    "print(l2+l3)"
    ]
   },
   {
@@ -119,8 +119,9 @@
     "    temp=[word for word in temp if word not in stopwords]\n",
     "    temp=[ps.stem(word) for word in temp]\n",
     "    temp = removeInfrequentWords(temp)\n",
-    "    temp=bigrams(temp)\n",
-    "    temp = trigrams(temp)\n",
+    "    temp1 = bigrams(temp)\n",
+    "    temp2 = trigrams(temp)\n",
+    "    temp = temp1+temp2\n",
     "    temp = removeInfrequentWords(temp)\n",
     "    #print(temp)\n",
     "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})\n",
@@ -186,7 +187,9 @@
     "            columns.append(index)\n",
     "            \n",
     "X = csr_matrix((values, (rows, columns)), shape=(len(terms), len(newCourses)))\n",
-    "print(X)\n",
+    "\n",
+    "with open(\"matrix.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(X, f)\n",
     "        "
    ]
   },
@@ -205,6 +208,7 @@
    },
    "outputs": [],
    "source": [
+    "print(X.count_nonzero())\n",
     "Xarray = X.toarray()\n",
     "a = 0\n",
     "for key,value in newCoursesDict.items():\n",
@@ -213,6 +217,12 @@
     "        break;\n",
     "\n",
     "idxIX = np.argsort(Xarray[:,a])[::-1][:15]\n",
+    "b=0\n",
+    "for key,value in termsDict.items():\n",
+    "    if value == 'system':\n",
+    "        b = key\n",
+    "        break;\n",
+    "print(Xarray[b][a])\n",
     "\n",
     "for i in idxIX:\n",
     "    print(termsDict[i])"
