--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -53,7 +53,12 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"matrix.pickle\", \"rb\") as f:\n",
+    "    X = pickle.load(f, encoding=\"utf-8\")\n",
+    "U,S,Vt = svds(X,300)\n",
+    "print(S)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,6 +111,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
