ex2 and 3 start

--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -56,8 +56,9 @@
    "source": [
     "with open(\"matrix.pickle\", \"rb\") as f:\n",
     "    X = pickle.load(f, encoding=\"utf-8\")\n",
+    "print(X.shape)\n",
     "U,S,Vt = svds(X,300)\n",
-    "print(S)"
+    "print([e*e for e in S[-20:]])\n"
    ]
   },
   {
@@ -75,7 +76,10 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Xapp = np.dot(np.dot(U,np.diag(S)),Vt)\n",
+    "print(Xapp.shape)\n"
+   ]
   },
   {
    "cell_type": "markdown",
