--- a/ix-lab4/lab4-3-lda.ipynb
+++ b/ix-lab4/lab4-3-lda.ipynb
@@ -35,7 +35,9 @@
    "outputs": [],
    "source": [
     "from pyspark.mllib.clustering import LDA, LDAModel\n",
-    "from pyspark.mllib.linalg import Vectors"
+    "from pyspark.mllib.linalg import Vectors\n",
+    "import json\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -49,10 +51,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "!hdfs dfs -put courses.txt\n",
+    "data = sc.textFile(\"courses.txt\").map(json.loads)\n",
+    "data = data.map(lambda x: x['listDescription'])\n",
+    "termCounts = data.flatMap(lambda x:x).map(lambda x : (x,1)).reduceByKey(lambda a,b:a+b).map(lambda x:(x[1],x[0])).sortByKey(False)\n",
+    "voc = termCounts.map(lambda x:x[1]).zipWithIndex().collectAsMap()\n",
+    "\n",
+    "def document_vector(document):\n",
+    "    id = document[1]\n",
+    "    counts = defaultdict(int)\n",
+    "    for token in document[0]:\n",
+    "        if token in voc:\n",
+    "            token_id = voc[token]\n",
+    "            counts[token_id] += 1\n",
+    "    counts = sorted(counts.items())\n",
+    "    keys = [x[0] for x in counts]\n",
+    "    values = [x[1] for x in counts]\n",
+    "    return (id, Vectors.sparse(len(voc), keys, values))\n",
+    "\n",
+    "documents = data.zipWithIndex().map(document_vector).map(list)\n",
+    "inv_voc = {value: key for (key, value) in voc.items()}\n",
+    "\n",
+    "lda_model = LDA.train(documents)\n",
+    "result =lda_model.describeTopics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print('topic',(i+1),'=================')\n",
+    "    for j in range(10):\n",
+    "        print(inv_voc[result[i][0][j]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,6 +145,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
