--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -64,19 +64,15 @@
    },
    "outputs": [],
    "source": [
-    "def bigrams(l):\n",
-    "    zipO = list(zip(l, l[1:]))\n",
-    "    returnl = [str(tup[0])+' '+str(tup[1]) for tup in zipO]\n",
-    "    return l+returnl\n",
-    "def trigrams(l):\n",
-    "    zipO = list(zip(l, l[1:], l[2:]))\n",
-    "    returnl = [str(tup[0])+' '+str(tup[1])+' '+str(tup[2]) for tup in zipO]\n",
-    "    return returnl\n",
+    "def bitrigrams(l):\n",
+    "    zipO1 = list(zip(l, l[1:]))\n",
+    "    zipO2 = list(zip(l, l[1:], l[2:]))   \n",
+    "    returnl1 = [str(tup[0])+' '+str(tup[1]) for tup in zipO1]\n",
+    "    returnl2 = [str(tup[0])+' '+str(tup[1])+' '+str(tup[2]) for tup in zipO2]  \n",
+    "    return l+returnl1+returnl2\n",
     "\n",
     "l1=[1,2,3,4,5,6,7,8]\n",
-    "l2 = bigrams(l1)\n",
-    "l3=trigrams(l1)\n",
-    "print(l2+l3)"
+    "print(bitrigrams(l1))"
    ]
   },
   {
@@ -119,9 +115,7 @@
     "    temp=[word for word in temp if word not in stopwords]\n",
     "    temp=[ps.stem(word) for word in temp]\n",
     "    temp = removeInfrequentWords(temp)\n",
-    "    temp1 = bigrams(temp)\n",
-    "    temp2 = trigrams(temp)\n",
-    "    temp = temp1+temp2\n",
+    "    temp = bitrigrams(temp)\n",
     "    temp = removeInfrequentWords(temp)\n",
     "    #print(temp)\n",
     "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})\n",
@@ -295,6 +289,20 @@
     "            elif i==tup[1]:\n",
     "                print(doc['name'])\n",
     "        print('------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def query2(l):\n",
+    "    print(ok)\n",
+    "    \n",
+    "print(ps.stem('marko')"
    ]
   },
   {
