exo 1 fin, exo 2 moitié

--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -9,13 +9,12 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** P\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* Matthias Leroy\n",
+    "* Pierre Fouche\n",
     "\n",
     "---\n",
     "\n",
@@ -54,11 +53,28 @@
    },
    "outputs": [],
    "source": [
+    "#We get from the disc the term-document matrix X\n",
+    "#as well as the dictionaries that link terms and document(courses) with their indices\n",
     "with open(\"matrix.pickle\", \"rb\") as f:\n",
     "    X = pickle.load(f, encoding=\"utf-8\")\n",
-    "print(X.shape)\n",
+    "with open(\"newCoursesDict.pickle\", \"rb\") as f:\n",
+    "    newCoursesDict = pickle.load(f, encoding=\"utf-8\")\n",
+    "with open(\"termsDict.pickle\", \"rb\") as f:\n",
+    "    termsDict = pickle.load(f, encoding=\"utf-8\")\n",
+    "\n",
+    "# we apply SVD with K = 300 to our term-document matrix X.\n",
     "U,S,Vt = svds(X,300)\n",
-    "print([e*e for e in S[-20:]])\n"
+    "print([e*e for e in S[-20:][::-1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Describe the rows and columns of U and V , and the values of S.\n",
+    "The columns of U describe a concept among all the terms of our matrix. Thus its rows define \n",
+    "\n",
+    "2. Print the top-20 eigenvalues of X."
    ]
   },
   {
@@ -72,13 +88,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "Xapp = np.dot(np.dot(U,np.diag(S)),Vt)\n",
-    "print(Xapp.shape)\n"
+    "topicTermDict = {}\n",
+    "indiceT = 1\n",
+    "for topicTerm in np.absolute(np.transpose(U))[-10:][::-1]:\n",
+    "    idxTerms = topicTerm.argsort()[-10:][::-1]\n",
+    "    tempList1 = []\n",
+    "    for idxT in idxTerms:\n",
+    "        term = termsDict[idxT]\n",
+    "        tempList1.append(term)\n",
+    "    topicTermDict[indiceT]=tempList1\n",
+    "    indiceT+=1\n",
+    "    \n",
+    "indiceD = 1\n",
+    "topicDocDict = {}\n",
+    "for topicDoc in np.absolute(Vt)[-10:][::-1]:\n",
+    "    idxDoc = topicDoc.argsort()[-10:][::-1]\n",
+    "    tempList2 = []\n",
+    "    for idxD in idxDoc:\n",
+    "        doc = newCoursesDict[idxD]['name']\n",
+    "        tempList2.append(doc)\n",
+    "    topicDocDict[indiceD]=tempList2\n",
+    "    indiceD+=1\n",
+    "\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    print('Terms for topic',i,'\\n')\n",
+    "    for j in range(10):\n",
+    "        print(topicTermDict[i][j])\n",
+    "    print('\\nDocument for topic',i,'\\n')\n",
+    "    for k in range(10):\n",
+    "        print(topicDocDict[i][k])\n",
+    "    print('------------------------------------------------------------\\n')\n"
    ]
   },
   {
@@ -92,7 +136,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
