--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -48,17 +48,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(104639, 854)\n",
+      "[4.4181538238761719, 4.6419239235656162, 4.7537710437892269, 4.7827782397662917, 4.9981620096615922, 5.2173021453657586, 6.26553085166372, 6.448190922332012, 6.7546626229347169, 6.8834014191881305, 6.9742734820095853, 7.2165894288041423, 7.7336614220295745, 8.0869243549343786, 8.5190044656864714, 9.4664167579664049, 10.218845251935486, 19.871937944857287, 24.659548744702914, 32.007029864032283]\n",
+      "[  9.45167559e-03   3.39262459e-04  -1.55039323e-02  -2.79188107e-03\n",
+      "   1.84781529e-03  -4.92590093e-04   1.30908330e-03  -8.01908812e-04\n",
+      "   3.25252191e-03   9.51849384e-05]\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"matrix.pickle\", \"rb\") as f:\n",
     "    X = pickle.load(f, encoding=\"utf-8\")\n",
     "print(X.shape)\n",
     "U,S,Vt = svds(X,300)\n",
-    "print([e*e for e in S[-20:]])\n"
+    "print([e*e for e in S[-20:]])\n",
+    "print(U[:,0][:10])"
    ]
   },
   {
@@ -76,10 +89,7 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "Xapp = np.dot(np.dot(U,np.diag(S)),Vt)\n",
-    "print(Xapp.shape)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
