--- a/ix-lab4/lab4-3-lda.ipynb
+++ b/ix-lab4/lab4-3-lda.ipynb
@@ -37,6 +37,7 @@
     "from pyspark.mllib.clustering import LDA, LDAModel\n",
     "from pyspark.mllib.linalg import Vectors\n",
     "import json\n",
+    "import numpy as np\n",
     "from collections import defaultdict"
    ]
   },
@@ -60,8 +61,17 @@
     "data = sc.textFile(\"courses.txt\").map(json.loads)\n",
     "data = data.map(lambda x: x['listDescription'])\n",
     "termCounts = data.flatMap(lambda x:x).map(lambda x : (x,1)).reduceByKey(lambda a,b:a+b).map(lambda x:(x[1],x[0])).sortByKey(False)\n",
-    "voc = termCounts.map(lambda x:x[1]).zipWithIndex().collectAsMap()\n",
-    "\n",
+    "voc = termCounts.map(lambda x:x[1]).zipWithIndex().collectAsMap()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def document_vector(document):\n",
     "    id = document[1]\n",
     "    counts = defaultdict(int)\n",
@@ -75,10 +85,7 @@
     "    return (id, Vectors.sparse(len(voc), keys, values))\n",
     "\n",
     "documents = data.zipWithIndex().map(document_vector).map(list)\n",
-    "inv_voc = {value: key for (key, value) in voc.items()}\n",
-    "\n",
-    "lda_model = LDA.train(documents)\n",
-    "result =lda_model.describeTopics()"
+    "inv_voc = {value: key for (key, value) in voc.items()}"
    ]
   },
   {
@@ -89,10 +96,25 @@
    },
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    print('topic',(i+1),'=================')\n",
-    "    for j in range(10):\n",
-    "        print(inv_voc[result[i][0][j]])"
+    "def trainLda(cluster = 10 ,alpha =- 1.0, beta = -1.0):\n",
+    "    lda_model = LDA.train(documents,k = cluster, docConcentration=alpha,topicConcentration=beta)\n",
+    "    result =lda_model.describeTopics(10)\n",
+    "    for i in range(len(result)):\n",
+    "        print('topic',(i+1),'=================')\n",
+    "        for j in range(len(result[i][0])):\n",
+    "            print(inv_voc[result[i][0][j]])\n",
+    "trainLda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trainLda(alpha=2.0,beta=2.0)"
    ]
   },
   {
@@ -106,10 +128,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for k in [12,15,18]:\n",
+    "    for a in np.linspace(1.01,4.01,3):\n",
+    "        for b in np.linspace(1.01,4.01,3):\n",
+    "            print(a,b,k)\n",
+    "            print(\"===========================================================================\")\n",
+    "            trainLda(k,a,b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,10 +151,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "trainLda(alpha=2.5,beta=2.5)"
+   ]
   },
   {
    "cell_type": "markdown",
