final exo 1 et 2

--- a/ix-lab4/lab4-2-lsi.ipynb
+++ b/ix-lab4/lab4-2-lsi.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,10 @@
    "source": [
     "import pickle\n",
     "import numpy as np\n",
-    "from scipy.sparse.linalg import svds"
+    "from scipy.sparse.linalg import svds\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem.lancaster import LancasterStemmer"
    ]
   },
   {
@@ -47,23 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(104639, 854)\n",
-      "[4.4181538238761719, 4.6419239235656162, 4.7537710437892269, 4.7827782397662917, 4.9981620096615922, 5.2173021453657586, 6.26553085166372, 6.448190922332012, 6.7546626229347169, 6.8834014191881305, 6.9742734820095853, 7.2165894288041423, 7.7336614220295745, 8.0869243549343786, 8.5190044656864714, 9.4664167579664049, 10.218845251935486, 19.871937944857287, 24.659548744702914, 32.007029864032283]\n",
-      "[  9.45167559e-03   3.39262459e-04  -1.55039323e-02  -2.79188107e-03\n",
-      "   1.84781529e-03  -4.92590093e-04   1.30908330e-03  -8.01908812e-04\n",
-      "   3.25252191e-03   9.51849384e-05]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#We get from the disc the term-document matrix X\n",
     "#as well as the dictionaries that link terms and document(courses) with their indices\n",
@@ -83,10 +74,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Describe the rows and columns of U and V , and the values of S.\n",
-    "The columns of U describe a concept among all the terms of our matrix. Thus its rows define \n",
+    "1) Each singular value of S describe the importance of some concept/topics, thus the highest values correspond to the most significance concept.<br/>\n",
+    "The columns of U describe a concept among all the terms of our matrix. Thus its rows define the terms.<br/>\n",
+    "The rows of Vt describe a concept among all the documents of our matrix. This its columns define the documents<br/>\n",
     "\n",
-    "2. Print the top-20 eigenvalues of X."
+    "\n",
+    "\n",
+    "2) The top-20 eigenvalues of X are the 20 biggest square of the singular value of S: see above."
    ]
   },
   {
@@ -106,6 +100,8 @@
    "source": [
     "topicTermDict = {}\n",
     "indiceT = 1\n",
+    "#we get the columns of U corresponding to the highest singular value of S.\n",
+    "#then we look for the 10 most important terms inside each topic\n",
     "for topicTerm in np.absolute(np.transpose(U))[-10:][::-1]:\n",
     "    idxTerms = topicTerm.argsort()[-10:][::-1]\n",
     "    tempList1 = []\n",
@@ -117,6 +113,8 @@
     "    \n",
     "indiceD = 1\n",
     "topicDocDict = {}\n",
+    "#we get the columns of Vt corresponding to the highest singular value of S.\n",
+    "#then we look for the 10 most important document(class) inside each topic\n",
     "for topicDoc in np.absolute(Vt)[-10:][::-1]:\n",
     "    idxDoc = topicDoc.argsort()[-10:][::-1]\n",
     "    tempList2 = []\n",
@@ -141,6 +139,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2)\n",
+    "\n",
+    "label topic 1: Visual computing<br/>\n",
+    "label topic 2: Medical science<br/>\n",
+    "label topic 3: Bio electronic<br/>\n",
+    "label topic 4: Thermodynamics<br/>\n",
+    "label topic 5: Electromagnetism<br/>\n",
+    "label topic 6: Physical waves<br/>\n",
+    "label topic 7: General physics<br/>\n",
+    "label topic 8: Astrophysics<br/>\n",
+    "label topic 9: Biological fluid<br/>\n",
+    "label topic 10: Fluid experimentation<br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 4.6: Document similarity search in concept-space"
    ]
   },
@@ -151,7 +167,103 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#function that compute the similarity between a term of index t and a document of index d\n",
+    "def similarity(t,d):\n",
+    "    Urow = U[t].reshape(1,300)\n",
+    "    Sdiag = np.diag(S)\n",
+    "    Vrow = Vt[:,d].reshape(300,1)\n",
+    "    Svd = np.dot(Sdiag,Vrow)\n",
+    "    \n",
+    "    sim = (np.dot(Urow,Svd))/(np.linalg.norm(Urow)*np.linalg.norm(Svd))\n",
+    "    return sim[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ps = PorterStemmer()\n",
+    "\n",
+    "#Function that find the index of a terms\n",
+    "def findIndexTerm(q):\n",
+    "    b=0\n",
+    "    for key,value in termsDict.items():\n",
+    "        if value == ps.stem(q):\n",
+    "            b = key\n",
+    "            break;\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Search function that compare the similarity between a given term and all the classes\n",
+    "#it print the top 10 of courses with it score of similarity with the term\n",
+    "def searchFunction(query):\n",
+    "    t = findIndexTerm(query)\n",
+    "    resultSim = []\n",
+    "    \n",
+    "    for d,doc in newCoursesDict.items():        \n",
+    "        resultSim.append((doc['name'],similarity(t,d)))\n",
+    "    \n",
+    "    sorted_by_similarity = sorted(resultSim, key=lambda tup: tup[1], reverse=True)\n",
+    "    \n",
+    "    return(sorted_by_similarity[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#we search for facebook\n",
+    "for result in searchFunction('facebook'):\n",
+    "    print('class:',result[0])\n",
+    "    print('score:', result[1])\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) With VSM in the first exercise, when we have searched facebook, we find only one class that match because only the course of 'Computational Social Media' have the term facebook in its description. However with LSI we have connected other terms with facebook, thus it returns all the courses that are connected to the same idea (like social media for example)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#we search for markov chains\n",
+    "for result in searchFunction('markov chains'):\n",
+    "    print('class:',result[0])\n",
+    "    print('score:', result[1])\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) We find the same courses but with other one that could be interesting without explicitly talking about marking chain (at least in their description)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,7 +279,59 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 0\n",
+    "for key,value in newCoursesDict.items():\n",
+    "    if value['name'] == 'Internet analytics':\n",
+    "        a = key\n",
+    "        break;\n",
+    "        \n",
+    "resultSim2 = []\n",
+    "    \n",
+    "for i,terms in termsDict.items():        \n",
+    "    resultSim2.append((terms,similarity(i,a)))\n",
+    "    \n",
+    "sorted_by_similarity2 = sorted(resultSim2, key=lambda tup: tup[1], reverse=True)\n",
+    "\n",
+    "coursesSim = []\n",
+    "for n,s in sorted_by_similarity2[:300]:\n",
+    "    for c,s2 in searchFunction(n):\n",
+    "        coursesSim.append((c,s+s2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import collections as col\n",
+    "\n",
+    "c = col.Counter()\n",
+    "for k, v in coursesSim:\n",
+    "    c[k] += v\n",
+    "\n",
+    "sortCourses = sorted(c.items(), key=lambda tup: tup[1], reverse=True)\n",
+    "\n",
+    "for course,score in sortCourses[1:6]:\n",
+    "    print(course)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) We have gotten the 5 first courses similar to COM 308 by combining the terms with the best similarity scores with Internet Analitics and the similarity scores of these terms with all the other courses.\n",
+    "\n",
+    "2)Thus we have find:<br/><br/>\n",
+    "Applied data analysis<br/>\n",
+    "Distributed information systems<br/>\n",
+    "A Network Tour of Data Science<br/>\n",
+    "Data science for business<br/>\n",
+    "Database systems<br/>"
+   ]
   }
  ],
  "metadata": {
