--- a/ix-lab4/lab4-1-vsm.ipynb
+++ b/ix-lab4/lab4-1-vsm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -59,11 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, '1 2', '2 3', '3 4', '4 5', '5 6', '6 7', '7 8', '1 2 3', '2 3 4', '3 4 5', '4 5 6', '5 6 7', '6 7 8']\n"
+     ]
+    }
+   ],
    "source": [
     "#function that given a list return a new list with the original elements of the list and its bi and tri grams.\n",
     "def bitrigrams(l):\n",
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +132,8 @@
     "    temp = removeInfrequentWords(temp)\n",
     "    newCourses.append({'name':course['name'],'listDescription':temp,'courseId':course['courseId'], 'description':course['description']})\n",
     "\n",
-    "save_json(newCourses, 'courses.txt')"
+    "with open(\"ex3.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(newCourses, f)"
    ]
   },
   {
