--- a/ix-lab4/lab4-3-lda.ipynb
+++ b/ix-lab4/lab4-3-lda.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *P*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Matthias Leroy*\n",
+    "* *Pierre Fouche*\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -37,6 +37,7 @@
     "from pyspark.mllib.clustering import LDA, LDAModel\n",
     "from pyspark.mllib.linalg import Vectors\n",
     "import json\n",
+    "import pickle\n",
     "import numpy as np\n",
     "from collections import defaultdict"
    ]
@@ -56,11 +57,15 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "!hdfs dfs -put courses.txt\n",
-    "data = sc.textFile(\"courses.txt\").map(json.loads)\n",
+    "with open(\"ex3.pickle\", \"rb\") as f:\n",
+    "    courses = pickle.load(f, encoding=\"utf-8\")\n",
+    "#Load the courses\n",
+    "data = sc.parallelize(courses)\n",
+    "#Retrieve the list of words for each course\n",
     "data = data.map(lambda x: x['listDescription'])\n",
+    "#Remove doublons\n",
     "termCounts = data.flatMap(lambda x:x).map(lambda x : (x,1)).reduceByKey(lambda a,b:a+b).map(lambda x:(x[1],x[0])).sortByKey(False)\n",
+    "#Create dic with word as key and indes as value\n",
     "voc = termCounts.map(lambda x:x[1]).zipWithIndex().collectAsMap()\n"
    ]
   },
@@ -72,6 +77,8 @@
    },
    "outputs": [],
    "source": [
+    "#Create a list that is the size of the vocabulary, \n",
+    "# and the value of each cell is the count of the word whose id is the index of that cell\n",
     "def document_vector(document):\n",
     "    id = document[1]\n",
     "    counts = defaultdict(int)\n",
@@ -96,6 +103,7 @@
    },
    "outputs": [],
    "source": [
+    "#Compute lda with the differents parameters\n",
     "def trainLda(cluster = 10 ,alpha =- 1.0, beta = -1.0):\n",
     "    lda_model = LDA.train(documents,k = cluster, docConcentration=alpha,topicConcentration=beta)\n",
     "    result =lda_model.describeTopics(10)\n",
@@ -107,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Topic 1: Engineering, Topic 2: Physics/Chemistry, Topic 3: Presentation, Topic 4: Algorithm, Topic 5: Methodology, Topic 6: Machine Learning, Topic 7: Mathematics, Topic 8: Electronic System, Topic 9: Stochastic Model, Topic 10: Physics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -114,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "trainLda(alpha=2.0,beta=2.0)"
+    "trainLda(cluster=12,alpha=6.0,beta=2.0)"
    ]
   },
   {
@@ -132,12 +147,40 @@
    },
    "outputs": [],
    "source": [
-    "for k in [12,15,18]:\n",
-    "    for a in np.linspace(1.01,4.01,3):\n",
-    "        for b in np.linspace(1.01,4.01,3):\n",
-    "            print(a,b,k)\n",
-    "            print(\"===========================================================================\")\n",
-    "            trainLda(k,a,b)"
+    "#Try some alphas\n",
+    "for a in np.linspace(1.01,6,11):\n",
+    "    print(a,\" 1.01\")\n",
+    "    print(\"=========================\")\n",
+    "    trainLda(alpha=a,beta=1.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A high value of alpha leads to more precise topics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Try some betas\n",
+    "for b in np.linspace(1.01,6,11):\n",
+    "    print(\"6.0 \",b)\n",
+    "    print(\"=========================\")\n",
+    "    trainLda(alpha =6.0, beta=b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A high value of beta leads to topics being more similar in terms of what words they contain."
    ]
   },
   {
@@ -155,7 +198,31 @@
    },
    "outputs": [],
    "source": [
-    "trainLda(alpha=2.5,beta=2.5)"
+    "#Find the best k, alpha and beta\n",
+    "for k in [12,15,18]:\n",
+    "    for a in np.linspace(1.01,6.01,3):\n",
+    "        for b in np.linspace(1.01,6.01,3):\n",
+    "            print(a,b,k)\n",
+    "            print(\"===========================================================================\")\n",
+    "            trainLda(k,a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainLda(cluster=12,alpha=6.0,beta=2.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We chose k=12 because there are approximately 12 differents sections in EPFL, alpha=6 because we want precise topics and beta = 2."
    ]
   },
   {
@@ -169,10 +236,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "wiki = sc.textFile(\"/ix/wikipedia-for-schools.txt\").map(json.loads)\n",
+    "data = wiki.map(lambda x: x['tokens'])\n",
+    "termCounts = data.flatMap(lambda x:x).map(lambda x : (x,1)).reduceByKey(lambda a,b:a+b).map(lambda x:(x[1],x[0])).sortByKey(False)\n",
+    "voc = termCounts.map(lambda x:x[1]).zipWithIndex().collectAsMap()\n",
+    "documents = data.zipWithIndex().map(document_vector).map(list)\n",
+    "inv_voc = {value: key for (key, value) in voc.items()}\n",
+    "\n",
+    "trainLda(12,8.0,2.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We chose k = 12 because Wikipedia has 12 portals.<br/>\n",
+    "Topic 1: General, Topic 2: Society,  Topic 3: Animals , Topic 4: Natural Science , Topic 5: Religions, Topic 6:Technologies, Topic 7:Globalization, Topic 8: Mathematics, Topic 9: Arts, Topic 10: History, Topic 11: Culture, Topic 12: Physics sciences\n"
+   ]
   }
  ],
  "metadata": {
